src/assets/styles/main.css
/* ... */
.profile-name {
    font-size: 1.6rem;
    font-weight: 600;
    margin-top: 1rem;
    margin-bottom: 0rem;
    color: var(--color-text);
    text-align: center;
}

.profile-status {
    font-size: 1rem;
    color: var(--color-light-text);
    margin-bottom: 0.5rem;
    text-align: center;
}

.profile-etc {
    font-size: 1rem;
    color: var(--color-text);
    margin-bottom: 1.5rem;
}

/* For Mobile */
@media (max-width: 768px) {
    .profile-container {
        display: flex;
        flex-direction: column;
        align-items: center;
        width: 100%;
        margin: 0;
    }

    .profile-image {
        width: 300px;
        height: 300px;
    }

    .profile-name,
    .profile-status {
        width: 100%;
    }

    .profile-etc {
        width: 100%;
        margin-bottom: 1rem;
    }
}

/* Social Icons */
.social-icon-list {
    justify-content: center;
    display: flex;
    margin-top: 0.5rem;
    gap: 0.5rem;
}

.social-icon {
    width: 35px;
    height: 35px;
    background: var(--color-white);
    color: var(--color-text);
    border-radius: 50%;
    display: flex;
    align-items: center;
    justify-content: center;
    backdrop-filter: blur(5px);
    transition: all 0.2s ease;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
}

.social-icon i {
    color: #444;
    font-size: 1rem;
    align-items: center;
    justify-content: center;
    transition: color 0.2s ease;
}

/* Bigger Google Scholar icon */
.social-icon:nth-child(1) i {
    font-size: 1.15rem;
}

.social-icon:hover {
    -moz-transform: scale(1.15);
    -o-transform: scale(1.15);
    -ms-transform: scale(1.15);
    -webkit-transform: scale(1.15);
    transform: scale(1.15);
    text-decoration: none;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
}

.social-icon:hover:nth-child(1) {
    background: var(--color-text);
}
.social-icon:hover:nth-child(1) i {
    color: var(--color-white);
}
.social-icon:hover:nth-child(2) {
    background: #00acee;
}
.social-icon:hover:nth-child(2) i {
    color: var(--color-white);
}
.social-icon:hover:nth-child(3) {
    background: #0e76a8;
}
.social-icon:hover:nth-child(3) i {
    color: var(--color-white);
}
.social-icon:hover:nth-child(4) {
    background: #24292e;
}
.social-icon:hover:nth-child(4) i {
    color: var(--color-white);
}
.social-icon:hover:nth-child(5) {
    background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);
}
.social-icon:hover:nth-child(5) i {
    color: var(--color-white);
}
.social-icon:hover:nth-child(6) {
    background: var(--color-text);
    color: var(--color-white);
}

/* For Mobile */
@media (max-width: 768px) {
    .social-icon {
        width: 45px;
        height: 45px;
        font-size: 1.15rem;
    }

    .social-icon i {
        font-size: 1.15rem;
    }

    /* Bigger Google Scholar icon */
    .social-icon:nth-child(1) i {
        font-size: 1.3rem;
    }
}

/* About Section */
.section-title {
    margin: 2rem 0 0.5rem 0;
    font-size: 1.5rem;
}

/* Education Section */
.education-item {
    min-width: 500px;
    overflow-x: auto;  /* Enable horizontal scrolling */
    white-space: nowrap;
    -webkit-overflow-scrolling: touch;
    background-color: transparent;
    border-radius: 10px;
    margin-bottom: 0;
    transition: transform 0.2s ease, box-shadow 0.2s ease;
    min-height: 150px;
    padding: 0 1.5rem;
    display: flex;
    align-items: center;
    gap: 1.5rem;
}

@media (max-width: 768px) {
    .education-item {
        min-width: 300px;
    }
}

.education-item::-webkit-scrollbar {
    display: none;
}

.education-item:hover::-webkit-scrollbar {
    display: block;
    height: 6px;
}

.education-item:hover::-webkit-scrollbar-track {
    background: rgba(0, 0, 0, 0.1);
    border-radius: 3px;
}

.education-item:hover::-webkit-scrollbar-thumb {
    background: rgba(0, 0, 0, 0.2);
    border-radius: 3px;
}

.education-item:hover {
    background-color: #ffffff77;
    /* background-color: #ffffffaa; */
    transform: translateY(-2px);
    box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
}

/* .education-item h3 {
    color: var(--color-text);
    font-size: 1.2rem;
} */

/* .education-item h3:hover {
    color: var(--color-green);
} */

.education-logo {
    flex: 0 0 auto;
    width: 75px;
    height: 75px;
    display: flex;
    align-items: center;
    justify-content: center;
    /* padding-right: 2rem; */
    position: relative;
}

.education-logo img {
    max-width: 100%;
    max-height: 100%;
    object-fit: contain;
}

.education-content {
    flex: 1;
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding-left: 0.5rem;
}

.page-education h1 {
    margin-bottom: 0.5rem;
}

.education-content h3 {
    /* font-size: 1.2rem !important; */
    color: var(--color-text);
}

.education-content h3 a {
    color: var(--color-text);
}
.education-content p a {
    color: var(--color-light-text);
}
.education-content h3 a:hover,
.education-content p a:hover {
    color: var(--color-green);
}

.education-degree {
    color: var(--color-text);
    font-weight: 500;
    margin: 0;
}

.education-year {
    color: var(--color-light-text);
    font-size: 0.9rem !important;
    margin: 0;
}

@media (max-width: 768px) {
    .education-container {
        padding: 1.5rem;
        margin-top: 1rem;
    }
}

/* Publications Section */

/* .publication-authors {
    font-style: italic;
}

.publication-venue {
    font-weight: 500;
} */
/* ... */

